--- a/components.html
+++ b/components.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <button class="bth">
-        get strarter
-    <span class="bth_icon">
-        <img 
-        src="./assets/svg/botton-ger.svg"
-        alt="button icon"
-        loading="lazy"
-        />
-        <img
-        src="./assets/svg/botton-ver.svg"
-        alt="button icon"
-        loading="lazy"
-        />
-    </span> 
-  </button> 
+    <button class="btn">
+        get started
+        <span>
+            <img src="./assets/svg/botton-ger.svg" alt="button icon" loading="lazy" />
+            <img src="./assets/svg/botton-ver.svg" alt="button icon" loading="lazy" />
+        </span>
+    </button>
+    <nav class="menu">
+        <ul class="menu__list">
+            <li class="menu__item">
+                <a href="#">home</a>
+            </li>
+            <li class="menu__item">
+                <a href="#">about us</a>
+            </li>
+            <li class="menu__item">
+                <a href="#">services</a>
+            </li>
+            <li class="menu__item">
+                <a href="#">pages</a>
+            </li>
+            <li class="menu__item">
+                <a href="#">contact Us</a>
+            </li>
+        </ul>
+    </nav>
+    <a href="#" class="link">
+        view more
+        <img src="./assets/svg/link.svg" alt="link icon" loading="lazy">
+    </a>
 </body>
+
 </html>
