--- a/components.html
+++ b/components.html
@@ -35,10 +35,52 @@
             </li>
         </ul>
     </nav>
+    
     <a href="#" class="link">
         view more
         <img src="./assets/svg/link.svg" alt="link icon" loading="lazy">
     </a>
-</body>
+
+    <div class="call">
+        <div class="call__image">
+        <img src="assets/svg/call.svg" alt="call icon" loading="lazy">
+        </div>
+        <div class="call__content">
+            <span class="call__number">012345678</span>
+            <span class="call__text">Call Us Anytime</span>
+        </div>
+    </div>
+    <ul class="about">
+        <li class="about__content">
+            <div class="about__top">
+                <img src="./assets/image/женщина1.png" alt="about image" loading="lazy">
+                <div class="about__title"></div>
+                <h2 class="about__name">Lisa Clairton</h2>
+                <span class="about__location">New York, USA</span>
+            </div>
+            <p class="about__text">We selected Interno interior because of rigorous design background & education.</p>
+        </li>
+
+        <li class="about__content">
+            <div class="about__top">
+                <img src="./assets/image/мужык.png" alt="about image" loading="lazy">
+                <div class="about__title"></div>
+                <h2 class="about__name">David Knight</h2>
+                <span class="about__location">Sydney, Australia</span>
+            </div>
+            <p class="about__text">The team exceeded our expectations and emerged as leaders of our project’s..</p>
+        </li>
+
+        <li class="about__content">
+            <div class="about__top">
+                <img src="./assets/image/женщина2.png" alt="about image" loading="lazy">
+                <div class="about__title"></div>
+                <h2 class="about__name">Lisa Clairton</h2>
+                <span class="about__location">Paris, France</span>
+            </div>
+            <p class="about__text">They balanced the architectural vision and the project realities beautifully.</p>
+        </li>
+    </ul>
+</body> 
 
 </html>
